--- a/Frontend/Trabajo/Trabajo/Trabajo.csproj
+++ b/Frontend/Trabajo/Trabajo/Trabajo.csproj
@@ -67,8 +67,22 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="opcionesPopup.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="principal.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="opcionesPopup.xaml.cs">
+      <DependentUpon>opcionesPopup.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="principal.xaml.cs">
+      <DependentUpon>principal.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
