endpoints generos-peliculas

--- a/Backend/NosaDD/src/main/resources/application.properties
+++ b/Backend/NosaDD/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=sa
 spring.datasource.password=ADMIN0
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 server.port=8090
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
