--- a/Backend/NosaDD/src/main/resources/application.properties
+++ b/Backend/NosaDD/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=NosaDD;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
-spring.datasource.password=Pablo2452
+spring.datasource.password=ADMIN0
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 server.port=8090
 spring.jpa.hibernate.ddl-auto=update
